--- a/style.css
+++ b/style.css
@@ -319,16 +319,17 @@ section#contact-section{
 }
 section#contact-section #contact{
     display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
     width: min(700px,90%);
     gap: 2rem;
     margin: 3rem auto;
-    flex-wrap: wrap;
 }
 section#contact-section #contact a.contact-tab{
     display: flex;
     align-items: center;
     width: fit-content;
-    margin: 0 auto;
     text-align: center;
     padding: .5rem 1rem;
     border: 2px solid var(--primary-text-color);
