added loader for interaction

--- a/style.css
+++ b/style.css
@@ -368,6 +368,34 @@ section#contact-section #contact a.contact-tab img{
     outline: none;
     padding: 1rem 2rem;
     cursor: pointer;
+    position: relative;
+}
+#loader{
+    display: none;
+    position: absolute;
+    inset: 0 0 0 0;
+    background-color: var(--bg-extra-light-color);
+}
+#loader span{
+    position: absolute;
+    z-index: 10;
+    inset: 50% auto auto 50%;
+    transform: translate(-50%,-50%);
+    display: block;
+    width: 20px;
+    aspect-ratio: 1;
+    border: 3px solid var(--bg-light-color);
+    border-top: 3px solid var(--primary-body-color);
+    border-radius: 50%;
+    animation: rotate 1s linear infinite;
+}
+@keyframes rotate {
+    from{
+        transform: translate(-50%,-50%) rotateZ(0deg);
+    }
+    to{
+        transform: translate(-50%,-50%) rotateZ(360deg);
+    }
 }
 
 @media screen and (max-width:678px){
