--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: .5rem;
-    position: fixed;
+    position: sticky;
     inset: 0 0 auto 0;
     z-index: 99999;
     background-color: var(--primary-body-color);
@@ -65,10 +65,29 @@ ul#nav-menu li a{
     padding: 0.5rem 1rem;
     text-decoration: none;
     color: var(--primary-text-color);
+    position: relative;
+}
+ul#nav-menu li:hover a::before,
+ul#nav-tabs li:hover a::before {
+    transform: scaleY(1);
+    transition-delay: 0.1s;
+}
+ul#nav-menu li a::before,
+ul#nav-tabs li a::before {
+    content: "";
+    display: block;
+    position: absolute;
+    height: 3px;
+    background-color: var(--primary-text-color);
+    inset: auto 0 0 0;
+    transform: scaleX(0);
+    transform-origin: right;
+    transition: .3s ease;
+    border-radius: 10px;
 }
 ul#nav-menu{
     display: none;
-    padding: 0;
+    padding: 15px;
     position: absolute;
     right: -70%;
     top: 3rem;
@@ -109,11 +128,11 @@ section#hero-section{
     flex-wrap: wrap-reverse;
     gap: 2rem;
     padding: 8rem 0rem 3rem;
-    height: 80vh;
+    height: 50vh;
     font-size: 18px;
 }
 #hero-text{
-    width: min(400px,100%);
+    width: min(500px,100%);
     padding: 0 2rem;
 }
 .name{
@@ -246,6 +265,7 @@ div#skills-container{
     border-radius: .5rem;
     text-align: center;
     transition: .4s;
+    font-weight: 500;
 }
 #skills-container .skill-box:hover{
     background-color: var(--bg-extra-light-color);
@@ -265,14 +285,14 @@ section#work-container{
 }
 #my-work{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     align-items: center;
     gap: 2rem;
     width: min(700px, 90%);
     margin: 3rem auto;
 }
 #my-work .project-work{
-    width: 300px;
+    width: 100%;
     aspect-ratio: 1;
     margin: 0 auto;
     position: relative;
