--- a/style.css
+++ b/style.css
@@ -88,7 +88,7 @@ ul#nav-tabs li a::before {
 ul#nav-menu{
     display: none;
     padding: 15px;
-    position: absolute;
+    position: fixed;
     right: -70%;
     top: 3rem;
     list-style: none;
